# distributed-optimization

./: AugmentedLagrangian.ipynb  AugmentnedLagrangian.ipynb  DualAscent.ipynb  LICENSE  MethodOfMultipliers.ipynb  NN_Optimization.ipynb  README.md  Stabiilty.ipynb  constrained_optimization.ipynb  convergence.ipynb  optimization_with_constraints.ipynb  pytorch-distributed-across-cpu.ipynb
ADMM/: Distributed_linear_regression.ipynb  consensus_cuda.ipynb  shared_consensus_cuda.ipynb
core_methods/: AugmentedLagrangian.ipynb  RestrictingOptimizationSurface.ipynb  continous_fixed_time_dgd.ipynb  gradient_fields.ipynb  least_squares_2nd_order_optmization_sine_cos.ipynb  normalized_gradient_.ipynb  saddle_point.ipynb
flower/simple-linear-regression/: README.md  pyproject.toml
flower/simple-linear-regression/simple_linear_regression/: __init__.py  client_app.py  server_app.py  task.py
graph-based-topology/: SchocasticAdjacency.ipynb  laplacian_dynamics.ipynb  undirected_unweighted_drone_direction_consensus.ipynb
graph_consensus/: connected_graph_avg_min_max_consensus.ipynb  distributed_decentrarlized_gradient_descent.ipynb  distributed_decentrarlized_gradient_descent_2nd_order.ipynb  fxts_consensus.ipynb  uncapacitated_capacitated_edp.ipynb  undirected_unweighted_drone_direction_consensus.ipynb  undirected_weighted_connected_graph_avg_min_max_consensus.ipynb
graphs/: SchocasticAdjacency.ipynb
math/: convex_functions.ipynb
pytorch-distributed-simple-linear-regression/: README.md  distributed_linear_fit_with_profiling.py  losses_rank_0.pt  losses_rank_2.pt  losses_rank_4.pt  losses_rank_7.pt  losses_rank_8.pt  model_rank_2.pt  model_rank_3.pt  model_rank_5.pt  model_rank_6.pt  model_rank_8.pt  model_rank_9.pt  (+8 more)
(+77 files in other folders)
